# python-safe_cmp

./: CHANGELOG.txt  README.rst  pyproject.toml  safe_cmp.py  setup.py  test.py
safe_cmp/: __init__.py  safe_cmp.py  test.py
