[tool.poetry]
name = "safe_cmp"
version = "0.1.0"
description = ""
authors = ["David Wolever <david@wolever.net>"]

[tool.poetry.dependencies]
python = "^3.6"
parameterized = "^0.7.4"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
